src/objects/QPMS__Risk_Occurrence__c.object
<CustomObject>
    <description>This is a master object in Quality Central. This is Probability of occurrence</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>Provide a detailed description such that ambiguity is eliminated and risk occurrence probability can be applied uniformly throughout the organization.</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Module__c</fullName>
        <description>This field is used to store module name</description>
        <label>Module</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>CAPA</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>CNG</fullName>
                </value>
                <value>
                    <fullName>CMP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Number__c</fullName>
        <description>Number associated with occurrence probability (not required)</description>
        <externalId>true</externalId>
        <label>Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Risk Occurrence</label>
    <listViews>
        <fullName>QPMS__All_Risk_Occurrences</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Active__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Risk Occurrences</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Risk Occurrence Probability</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Occurrences</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Past_Occurrence</fullName>
        <active>true</active>
        <label>Past Occurrence</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Risk_Occurrence</fullName>
        <active>true</active>
        <label>Risk Occurrence</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>QPMS__Occurrence_Number_Greater_Than_Zero</fullName>
        <active>false</active>
        <errorConditionFormula>QPMS__Number__c &gt; 0</errorConditionFormula>
        <errorDisplayField>QPMS__Number__c</errorDisplayField>
        <errorMessage>Occurrence Probability Number must be greater than zero.</errorMessage>
    </validationRules>
</CustomObject>